add precompiled header, shaving 24 seconds off build time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,35 @@ find_package(Clang REQUIRED CONFIG)
 include_directories(SYSTEM ${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS} ${CLANG_LIBRARY_DIRS})
 
+# Precompiled header setup for GCC
+set(PCH_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/stdafx.h")
+set(PCH_FILE "${CMAKE_CURRENT_BINARY_DIR}/stdafx.h.gch")
+
+add_custom_command(
+    OUTPUT ${PCH_FILE}
+    COMMAND ${CMAKE_CXX_COMPILER}
+            -x c++-header
+            ${CMAKE_CXX_FLAGS}
+            -I${CMAKE_CURRENT_SOURCE_DIR}
+            -I${LLVM_INCLUDE_DIRS}
+            -I${CLANG_INCLUDE_DIRS}
+            -o ${PCH_FILE}
+            ${PCH_HEADER}
+    DEPENDS ${PCH_HEADER}
+    COMMENT "Generating precompiled header"
+)
+
 add_executable(tinysea
     main.cpp
 )
+
+target_compile_options(tinysea PRIVATE
+    -Winvalid-pch
+    -include ${PCH_HEADER}
+)
+
+add_custom_target(tinysea_pch DEPENDS ${PCH_FILE})
+add_dependencies(tinysea tinysea_pch)
 
 target_link_libraries(tinysea
     PRIVATE
