split into smaller files doesn't make the build any faster, probably because of i/o

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,9 @@ add_custom_command(
 
 add_executable(tinysea
     main.cpp
+    renamer.cpp
+    ASTVisitor.cpp
+    PPCallbacks.cpp
 )
 
 target_compile_options(tinysea PRIVATE
